# anycode

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASE.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml
docs/backlog/phase-2-persistence-resilience/: 001-pluggable-memory.md  002-checkpointing.md  003-human-in-the-loop.md  README.md
examples/: 01_solo_worker.py  02_crew_workflow.py  03_staged_pipeline.py  04_hybrid_tooling.py  05_production_features.py  06_pluggable_memory.py  07_checkpointing.py  08_hitl_approval.py  09_multi_provider.py  10_mcp_tools.py  11_agent_handoff.py  12_intelligent_routing.py
scripts/: infra.sh  lint.sh  setup.sh  test.sh
src/anycode/: __init__.py  constants.py  types.py
src/anycode/checkpoint/: __init__.py  manager.py  serializer.py  store.py
src/anycode/collaboration/: __init__.py  kv_store.py  message_bus.py  shared_mem.py  team.py
src/anycode/core/: __init__.py  agent.py  orchestrator.py  pool.py  runner.py  scheduler.py
src/anycode/guardrails/: __init__.py  budget.py  hooks.py  validators.py
src/anycode/handoff/: __init__.py  executor.py  protocol.py  tool.py
src/anycode/helpers/: __init__.py  concurrency_gate.py  usage_tracker.py  uuid7.py
src/anycode/hitl/: __init__.py  approval.py  channels.py  review.py
src/anycode/mcp/: __init__.py  bridge.py  client.py  config.py
src/anycode/memory/: __init__.py  chromadb_store.py  composite.py  factory.py  redis_store.py  sqlite_store.py  vector_store.py
src/anycode/providers/: __init__.py  _openai_compat.py  adapter.py  anthropic.py  azure.py  bedrock.py  google.py  ollama.py  openai.py
src/anycode/routing/: __init__.py  classifier.py  router.py  rules.py
src/anycode/structured/: __init__.py  output.py
src/anycode/tasks/: __init__.py  queue.py  task.py
src/anycode/telemetry/: __init__.py  events.py  metrics.py  tracer.py
src/anycode/tools/: __init__.py  bash.py  built_in.py  executor.py  file_edit.py  file_read.py  file_write.py  grep.py  registry.py
tests/: conftest.py  mcp_echo_server.py  test_checkpoint.py  test_guardrails.py  test_handoff.py  test_hitl.py  test_mcp.py  test_mcp_integration.py  test_memory.py  test_providers.py  test_routing.py  test_structured_output.py  test_telemetry.py
tests/integration/: conftest.py  test_checkpoint_stores.py  test_chromadb_store.py  test_composite_memory.py  test_full_pipeline.py  test_redis_store.py  test_sqlite_store.py
